@@ -13,13 +13,13 @@ perl <<'END_SCRIPT'
 #$URL$
 #------------------------------------------------------------------------------
 #*
-#* Unit test for the COD::CIF::Data::CODFlags::has_calc_coordinates() subroutine.
+#* Unit test for the COD::CIF::Data::CODFlags::has_calc_sites() subroutine.
 #**
 
 use strict;
 use warnings;
 
-use COD::CIF::Data::CODFlags qw( has_calc_coordinates );
+use COD::CIF::Data::CODFlags qw( has_calc_sites );
 use COD::CIF::Tags::Manage qw( new_datablock );
 
 my @data_blocks;
@@ -71,7 +71,7 @@ push @data_blocks, $data_block;
 
 print "Output\tData block name\n";
 for my $test_case (@data_blocks) {
-    print has_calc_coordinates($test_case) . "\t" . $test_case->{'name'} . "\n";
+    print has_calc_sites($test_case) . "\t" . $test_case->{'name'} . "\n";
 }
 
 END_SCRIPT
