@@ -1,3 +1,10 @@
+cod-tools (^/branches/feature/egle-additional-CODFlags)
+
+  * Added:
+    - COD::CIF::Data::CODFlags:
+        - has_calc_sites() subroutine.
+        - has_dummy_sites() subroutine.
+
 cod-tools (unreleased)
 
   * Added:
